sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: demo-sts
  labels:
    app: demo
spec:
  serviceName: "demo-sts-svc"   # Headless service required for StatefulSet
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: adikarthik/demo   # Your app image
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: demo-pvc
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: demo-pvc
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
