amzon-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: amazon
  name: amazon
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: amazon
  type: ClusterIP
status:
  loadBalancer: {}
