sboot-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-adu
  name: demo-adu
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-adu
  type: ClusterIP
status:
  loadBalancer: {}
