ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: demo-adu
            port:
              number: 80
        path: /demo1/api/v1/projects
        pathType: Exact
      - backend:
          service:
            name: rest
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
